# yggdryl

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  mkdocs.yml
bindings/node/: Cargo.toml  README.md  package.json  yggdryl.d.ts  yggdryl.js
bindings/node/bench/: data.bench.js  dtype.bench.js  factory.bench.js  field.bench.js  scalar.bench.js  serie.bench.js
bindings/node/benchmark/: buffer.bench.js  compression.bench.js  compression_native.bench.js  converter.bench.js  io.bench.js  memory.bench.js  types.bench.js  uri.bench.js
bindings/node/scripts/: fix-dts.js
bindings/node/src/: binary.rs  binary_scalar.rs  binary_type.rs  buffer.rs  builders.rs  bytes.rs  bytesio.rs  charset.rs  compression.rs  converter.rs  core.rs  data.rs  datatype.rs  datatype_id.rs  date.rs  datetime.rs  deccolumn.rs  decimal.rs  dtype.rs  duration.rs  factory.rs  field.rs  headers.rs  http.rs  infer.rs  io.rs  iostats.rs  jsonfmt.rs  jsonparams.rs  lib.rs  localpath.rs  media.rs  mediatype.rs  memory.rs  mime.rs  mimetype.rs  nested.rs  nullvalues.rs  ops.rs  scalar.rs  (+17 more)
bindings/node/test/: amd.test.js  arrow.test.js  buffer.test.js  buffers.test.js  builders.test.js  bytesio.test.js  casting.test.js  compression.test.js  converter.test.js  data.test.js  datatype_id.test.js  deccolumn.test.js  decimal.test.js  dtype.test.js  factory.test.js  field.test.js  fromScalars.test.js  gpu.test.js  headers.test.js  http.test.js  infer.test.js  io.test.js  io_capacity.test.js  io_json.test.js  io_parity.test.js  io_write.test.js  localpath.test.js  media.test.js  mediatype.test.js  memory.test.js  mimetype.test.js  mutate.test.js  nested.test.js  nestedListMap.test.js  null.test.js  nullvalues.test.js  ops.test.js  record.test.js  scalar.test.js  schema.test.js  (+13 more)
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/benches/: bench_data.py  bench_dtype.py  bench_factory.py  bench_field.py  bench_scalar.py  bench_serie.py
bindings/python/benchmarks/: bench_buffer.py  bench_compression.py  bench_compression_native.py  bench_converter.py  bench_io.py  bench_memory.py  bench_types.py  bench_uri.py
bindings/python/src/: arrow.rs  binary.rs  binary_scalar.rs  binary_type.rs  buffer.rs  buffers.rs  builders.rs  bytes.rs  bytesio.rs  charset.rs  compression.rs  converter.rs  core.rs  data.rs  datatype.rs  datatype_id.rs  date.rs  datetime.rs  deccolumn.rs  decimal.rs  dtype.rs  duration.rs  factory.rs  field.rs  headers.rs  http.rs  infer.rs  io.rs  iostats.rs  jsonfmt.rs  jsonparams.rs  lib.rs  localpath.rs  media.rs  mediatype.rs  memory.rs  mime.rs  mimetype.rs  nested.rs  nullvalues.rs  (+18 more)
bindings/python/tests/: test_amd.py  test_arrow.py  test_buffer.py  test_buffers.py  test_builders.py  test_bytesio.py  test_casting.py  test_compression.py  test_converter.py  test_data.py  test_datatype_id.py  test_deccolumn.py  test_decimal.py  test_dtype.py  test_factory.py  test_field.py  test_from_scalars.py  test_gpu.py  test_headers.py  test_http.py  test_infer.py  test_io.py  test_io_capacity.py  test_io_json.py  test_io_parity.py  test_io_write.py  test_localpath.py  test_media.py  test_mediatype.py  test_memory.py  test_mimetype.py  test_mutate.py  test_nested.py  test_nested_list_map.py  test_null.py  test_nullvalues.py  test_ops.py  test_record.py  test_requests_comparison.py  test_scalar.py  (+14 more)
crates/yggdryl/: Cargo.toml  README.md
crates/yggdryl-array/: Cargo.toml  README.md
crates/yggdryl-array/src/: array.rs  arrays.rs  error.rs  lib.rs  primitive_array.rs
crates/yggdryl-array/tests/: primitive_array.rs  serde_roundtrip.rs
crates/yggdryl-buffer/: Cargo.toml  README.md
crates/yggdryl-buffer/benches/: buffer.rs  io.rs
crates/yggdryl-buffer/src/: boolean_buffer.rs  buffer_error.rs  f32_buffer.rs  f64_buffer.rs  i16_buffer.rs  i32_buffer.rs  i64_buffer.rs  i8_buffer.rs  lib.rs  primitive.rs  u16_buffer.rs  u32_buffer.rs  u64_buffer.rs  u8_buffer.rs
crates/yggdryl-buffer/tests/: buffer.rs  byte_slice.rs  int.rs  io.rs  io_edge_cases.rs  std_io.rs  typed_cursor.rs  typed_io.rs
crates/yggdryl-compression/: Cargo.toml  README.md
crates/yggdryl-compression/benches/: compression.rs
crates/yggdryl-compression/src/: compress_io.rs  compression.rs  compression_decoder.rs  compression_encoder.rs  gzip.rs  lib.rs  typed_compression_decoder.rs  typed_compression_encoder.rs  zstd.rs
crates/yggdryl-compression/tests/: compression.rs
crates/yggdryl-converter/: Cargo.toml
crates/yggdryl-converter/benches/: converter.rs
crates/yggdryl-converter/src/: bytes_converter.rs  cast_converter.rs  convert_error.rs  converter.rs  converter_kind.rs  identity_converter.rs  lib.rs  primitive_type.rs  string_converter.rs  typed_converter.rs  utf8_converter.rs
crates/yggdryl-converter/tests/: converter.rs
crates/yggdryl-core/: Cargo.toml  README.md
crates/yggdryl-core/benches/: access.rs  adapters.rs  arrow.rs  buffer.rs  buffers.rs  bytes.rs  compression.rs  converter.rs  decimal.rs  fixed.rs  headers.rs  heap.rs  io.rs  io_amd.rs  io_gpu.rs  io_local_io.rs  io_local_mmap.rs  io_memory_heap.rs  io_memory_mmap.rs  io_uri.rs  nested.rs  numerics.rs  ops.rs  temporal.rs  typed.rs  typed_convert.rs  typed_growth.rs  typed_nested.rs  uri.rs  url.rs  var.rs  version.rs
crates/yggdryl-core/src/: bit_io.rs  bit_slice.rs  buffer.rs  byte_cursor.rs  byte_io.rs  byte_slice.rs  bytes.rs  bytes_io.rs  charset.rs  compress.rs  compression.rs  datatype_id.rs  encoding.rs  error.rs  headers.rs  int256.rs  io.rs  io_cursor.rs  (+10 more)
crates/yggdryl-data/: Cargo.toml  README.md
crates/yggdryl-dtype/: Cargo.toml  README.md
crates/yggdryl-field/: Cargo.toml  README.md
crates/yggdryl-http/: Cargo.toml  README.md
crates/yggdryl-io/: Cargo.toml  README.md
crates/yggdryl-media/: Cargo.toml  README.md
crates/yggdryl-saga/: Cargo.toml  README.md
crates/yggdryl-scalar/: Cargo.toml  README.md
crates/yggdryl-schema/: Cargo.toml  README.md
crates/yggdryl-serie/: Cargo.toml  README.md
crates/yggdryl-url/: Cargo.toml  README.md
crates/yggdryl-version/: Cargo.toml  README.md
(+1281 files in other folders)
