[workspace]
resolver = "2"
members = ["crates/yggdryl-core", "bindings/python", "bindings/node"]
# `cargo build` / `cargo test` with no args only touch the pure-Rust core. The Python and
# Node extensions are built through their own toolchains (maturin / napi), so the default
# workflow never needs Python or Node headers.
default-members = ["crates/yggdryl-core"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
authors = ["yggdryl contributors"]
repository = "https://github.com/Platob/yggdryl"
homepage = "https://github.com/Platob/yggdryl"
description = "yggdryl — an Apache Arrow-backed Rust library"
keywords = ["rust", "arrow", "yggdryl"]

[workspace.dependencies]
# The Rust core — the source of truth the bindings delegate to.
yggdryl-core = { path = "crates/yggdryl-core", version = "0.1.1" }
# Apache Arrow's buffer subset — the physical layer the foundation is built on.
arrow-buffer = "55"
# Python extension via PyO3, targeting the stable ABI (one cp37-abi3 wheel per OS/arch).
pyo3 = { version = "0.22", features = ["abi3-py37"] }
# Node extension via napi-rs.
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
