[workspace]
resolver = "2"
members = ["crates/yggdryl-core", "bindings/python", "bindings/node"]
# `cargo build` / `cargo test` with no args only touch the pure-Rust core. The Python and
# Node extensions are built through their own toolchains (maturin / napi), so the default
# workflow never needs Python or Node headers.
default-members = ["crates/yggdryl-core"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
authors = ["yggdryl contributors"]
repository = "https://github.com/Platob/yggdryl"
homepage = "https://github.com/Platob/yggdryl"
description = "yggdryl — an Apache Arrow-backed Rust library"
keywords = ["rust", "arrow", "yggdryl"]

[workspace.dependencies]
# The Rust core — the source of truth the bindings delegate to.
yggdryl-core = { path = "crates/yggdryl-core", version = "0.1.1" }
# Apache Arrow's buffer subset — the physical layer the foundation is built on.
# 56 adds the narrow `Decimal32`/`Decimal64` array + schema types (the 32/64-bit decimals).
arrow-buffer = "56"
# IEEE-754 half-precision float — the value type behind `f16` (matches arrow-buffer's half).
half = "2"
# Optional Arrow interop (behind the core's `arrow` feature): arrays + schema + the erased
# `ArrayData` (the generic buffers+DataType array builder the nested/erased-column bridge uses).
arrow-array = "56"
arrow-schema = "56"
arrow-data = "56"
# Temporal: civil-calendar + timezone data. `chrono` for the calendar/offset primitives and
# `chrono-tz` for the full IANA tz database (both pure-Rust, auto-installable). Kept an
# implementation detail of `io::fixed::temporal` — never in a public signature.
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
chrono-tz = { version = "0.10", default-features = false }
# Python extension via PyO3, targeting the stable ABI (one cp37-abi3 wheel per OS/arch).
# `multiple-pymethods` lets a class's methods be split across several `#[pymethods]` blocks (the
# temporal bindings share a common block via a macro plus per-type conversion blocks).
pyo3 = { version = "0.22", features = ["abi3-py37", "multiple-pymethods"] }
# Node extension via napi-rs.
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
