[package]
name = "yggdryl-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "yggdryl — Apache Arrow-backed Rust library (Node extension)"
publish = false

[lib]
# A napi addon is a C dynamic library.
crate-type = ["cdylib"]

[dependencies]
# The Rust core — this binding is a thin wrapper that delegates to it.
yggdryl-core = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
