[package]
name = "yggdryl-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "yggdryl — Apache Arrow-backed Rust library (Node extension)"
publish = false

[lib]
# A napi addon is a C dynamic library.
crate-type = ["cdylib"]

[dependencies]
# The Rust core — this binding is a thin wrapper that delegates to it. The `compression`
# feature pulls the native codec cores (flate2 / zstd / xz2) so the `yggdryl.compression`
# namespace and the IOBase compression helpers resolve real Gzip / Zlib / Zstd / Lzma codecs;
# `amd` enables the AMD Radeon device-memory backend behind the `yggdryl.amd` namespace.
yggdryl-core = { workspace = true, features = ["compression", "amd"] }
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
