[package]
name = "yggdryl-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "yggdryl — Apache Arrow-backed Rust library (Python extension)"
publish = false

[lib]
name = "yggdryl"
# A Python extension module is a C dynamic library.
crate-type = ["cdylib"]

[dependencies]
# The Rust core — this binding is a thin wrapper that delegates to it.
yggdryl-core = { workspace = true }
# `extension-module` links against the interpreter at import time (added on top of the
# workspace's stable-ABI `abi3-py37`), so `cargo build`/`cargo test` never touch this crate
# (default-members = core); maturin builds it.
pyo3 = { workspace = true, features = ["extension-module"] }
