[package]
name = "yggdryl-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "yggdryl — Apache Arrow-backed Rust library (Python extension)"
publish = false

[lib]
name = "yggdryl"
# A Python extension module is a C dynamic library.
crate-type = ["cdylib"]

[dependencies]
# The Rust core — this binding is a thin wrapper that delegates to it. The `compression`
# feature compiles the native codec cores (flate2 / zstd / xz2) into the extension so the
# `yggdryl.compression` codecs and the source compress/decompress helpers resolve real codecs.
# `gpu-amd` compiles the device-memory layer (`io::gpu`, the AMD Radeon architecture) so the
# `yggdryl.gpu` submodule (`GpuDevice` / `AmdBuffer` + `available_devices` / `default_device`)
# resolves the same devices the core probes.
yggdryl-core = { workspace = true, features = ["compression", "gpu-amd"] }
# `extension-module` links against the interpreter at import time (added on top of the
# workspace's stable-ABI `abi3-py37`), so `cargo build`/`cargo test` never touch this crate
# (default-members = core); maturin builds it.
pyo3 = { workspace = true, features = ["extension-module"] }
# Arrow FFI (C Data Interface) — export/import a StructArray as ArrowArray + ArrowSchema for
# the `__arrow_c_array__` / `__arrow_c_schema__` PyCapsule protocol pyarrow consumes zero-copy.
# The `ffi` feature gates the `to_ffi` / `from_ffi` + `FFI_Arrow*` surface.
