[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "yggdryl"
version = "0.1.1"
description = "yggdryl — an Apache Arrow-backed Rust library (Python extension)"
requires-python = ">=3.7"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.maturin]
# One cp37-abi3 wheel per OS/arch covers CPython >= 3.7.
features = ["pyo3/extension-module"]
module-name = "yggdryl"
