[package]
name = "yggdryl-buffer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Arrow-backed byte/typed buffers, positioned IO, and wide integers — yggdryl's foundation"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_buffer"
path = "src/lib.rs"

[dependencies]
# Apache Arrow's buffer subset — the backing store for every resource here: the byte
# `Buffer`/`MutableBuffer`, the typed `ScalarBuffer`, the `BooleanBuffer`, and the wide
# `i256`. Not optional — the whole crate is Arrow-backed for straight zero-copy access.
# This is the crate's ONLY dependency: it is the foundation the rest of yggdryl builds on.
arrow-buffer = { workspace = true }

# Dependency-free throughput benches (`harness = false`, their own `main`).
[[bench]]
name = "buffer"
harness = false

[[bench]]
name = "io"
harness = false
