[package]
name = "yggdryl-buffer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Arrow-backed byte/typed buffers, positioned IO, and wide integers — yggdryl's foundation"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_buffer"
path = "src/lib.rs"

[dependencies]
# The generic foundation: the wide integers (`i96` / `i256`) this crate's `IoPrimitive`
# element codec reads and writes. (`yggdryl-buffer` sits directly above core.)
yggdryl-core = { workspace = true }
# Apache Arrow's buffer subset — the backing store for every resource here: the byte
# `Buffer`/`MutableBuffer`, the typed `ScalarBuffer`, and the `BooleanBuffer`.
arrow-buffer = { workspace = true }

# Dependency-free throughput benches (`harness = false`, their own `main`).
[[bench]]
name = "buffer"
harness = false

[[bench]]
name = "io"
harness = false
