[package]
name = "yggdryl-compression"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Compression codecs for yggdryl (gzip, zstd) over the core codec base + buffer IO"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_compression"
path = "src/lib.rs"

[features]
# The gzip compression codec. On by default so the standard build ships it;
# disable with `--no-default-features` to drop `flate2` and leave only the
# compression traits.
default = ["gzip", "zstd"]
gzip = ["dep:flate2"]
# Swap flate2's backend to zlib-ng — a SIMD-optimised zlib, typically faster than
# the stock C zlib that Python/Node link. Needs a C toolchain + CMake at build time
# (see `scripts/setup-build-deps.py`); the native bindings enable it.
gzip-zlib-ng = ["gzip", "flate2/zlib-ng"]
# The zstd compression codec. On by default; `zstd` bundles libzstd and builds it
# via `cc`, so a C compiler is required (CMake is not).
zstd = ["dep:zstd"]

[dependencies]
# The generic codec base — the `Encoder` / `Decoder` byte-array contracts these codecs
# implement, and the shared `EncodeError` / `DecodeError`.
yggdryl-core = { workspace = true }
# Positioned IO — the `ByteBuffer` / `IOBase` cursors the streaming codecs read and write
# through (`compress_stream` / `decompress_stream`).
yggdryl-buffer = { workspace = true }
# gzip/deflate backend; optional so it is compiled only when the `gzip` feature is enabled.
flate2 = { workspace = true, optional = true }
# zstd backend; optional, enabled by the `zstd` feature.
zstd = { workspace = true, optional = true }

# Dependency-free throughput bench (`harness = false`, its own `main`).
[[bench]]
name = "compression"
harness = false
