[package]
name = "yggdryl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "yggdryl core — the Arrow-backed foundation"
keywords.workspace = true

[lib]
name = "yggdryl_core"
path = "src/lib.rs"

# Dependency-free time+memory benchmarks (their own counting allocator, plain `main`).
[[bench]]
name = "io_memory_heap"
harness = false

[[bench]]
name = "io_local_mmap"
harness = false

[[bench]]
name = "io_local_io"
harness = false

[[bench]]
name = "uri"
harness = false

[[bench]]
name = "headers"
harness = false

[[bench]]
name = "compression"
harness = false
required-features = ["compression"]

[[bench]]
name = "io_gpu"
harness = false
required-features = ["gpu"]

[features]
# `compression` is the ONLY feature that pulls external crates: the native codec cores for the
# Gzip / Zlib / Zstd / Lzma implementations. The default core stays dependency-free — the
# `Compression` trait, the `MimeType`/`IOBase` integration, and magic inference are all `std`.
default = []
compression = ["dep:flate2", "dep:zstd", "dep:xz2"]
# `gpu` enables the device-memory layer (`io::gpu`), organized by architecture: the `GpuMemory`
# trait over `IOBase`, the CPU backend where device memory IS our `Heap` (`CpuHeap`), and the
# `MemoryInfo`/`GpuDevice` probe. All dependency-free. `gpu-amd` / `gpu-cuda` add the AMD Radeon /
# NVIDIA architecture modules (native detection today; the VRAM queue drops in behind them later).
gpu = []
gpu-amd = ["gpu"]
gpu-cuda = ["gpu"]

[dependencies]
# Dependency-free by default: the core is the abstract memory-access traits (with an in-heap
# `Heap` source), the RFC 3986 URI/URL family, and the media-type layer — all on `std` alone.
# The compression codecs are the sole opt-in native dependencies (behind `--features compression`).
#
# `flate2` runs on the **`zlib-rs`** backend (a pure-Rust port of the SIMD-tuned zlib-ng): it beats
# both the default `miniz_oxide` and the C `zlib` that Python's `gzip`/`zlib` link — with **no C
# toolchain** (stays cross-platform, no cmake), so gzip/zlib stay dependency-light and portable
# while out-running the language-native codecs (see `benchmarks/yggdryl-core/compression.md`).
flate2 = { version = "1.1", optional = true, default-features = false, features = [
    "zlib-rs",
] }
zstd = { version = "0.13", optional = true }
xz2 = { version = "0.1", optional = true }
