[package]
name = "yggdryl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "yggdryl core — the Arrow-backed foundation"
keywords.workspace = true

[lib]
name = "yggdryl_core"
path = "src/lib.rs"

# Dependency-free time+memory benchmarks (their own counting allocator, plain `main`).
[[bench]]
name = "typed"
harness = false

[[bench]]
name = "typed_growth"
harness = false

[[bench]]
name = "typed_nested"
harness = false

[[bench]]
name = "typed_convert"
harness = false

[[bench]]
name = "arrow"
harness = false
required-features = ["arrow"]

[[bench]]
name = "io_memory_heap"
harness = false

[[bench]]
name = "io_local_mmap"
harness = false

[[bench]]
name = "io_local_io"
harness = false

[[bench]]
name = "uri"
harness = false

[[bench]]
name = "headers"
harness = false

[[bench]]
name = "compression"
harness = false
required-features = ["compression"]

[[bench]]
name = "io_amd"
harness = false
required-features = ["amd"]

[features]
# `compression` is the ONLY feature that pulls external crates: the native codec cores for the
# Gzip / Zlib / Zstd / Lzma implementations. The default core stays dependency-free — the
# `Compression` trait, the `MimeType`/`IOBase` integration, and magic inference are all `std`.
default = []
compression = ["dep:flate2", "dep:zstd", "dep:xz2"]
# `amd` enables the AMD Radeon device-memory family (`io::amd`): the AMD-optimized `AmdHeap` /
# `AmdCursor` / `AmdSlice` over the full `IOBase` byte + bulk contract, the `AmdMemory` host↔device
# transfer, and the live Radeon detection (`AmdDevice` / `detect`). Dependency-free (the CPU byte
# layer is `io::memory`; `MemoryInfo` lives at the io root). The VRAM queue + device kernels drop in
# behind this feature later.
amd = []
# `arrow` enables the Apache Arrow interop bridge (`crate::arrow`): every element type converts to /
# from its closest Arrow `DataType` / `Field` / `Buffer` / `Array`, and a struct column to / from a
# `RecordBatch` + `Schema` — zero-copy where possible, closest-match with a documented lossy edge
# when Arrow has no exact type. The core stays dependency-free by default; this is the second opt-in
# feature that pulls external crates — the granular `arrow-*` crates (schema/array/buffer/data).
arrow = ["dep:arrow-schema", "dep:arrow-array", "dep:arrow-buffer", "dep:arrow-data"]

[dependencies]
# Dependency-free by default: the core is the abstract memory-access traits (with an in-heap
# `Heap` source), the RFC 3986 URI/URL family, and the media-type layer — all on `std` alone.
# The compression codecs are the sole opt-in native dependencies (behind `--features compression`).
#
# `flate2` runs on the **`zlib-rs`** backend (a pure-Rust port of the SIMD-tuned zlib-ng): it beats
# both the default `miniz_oxide` and the C `zlib` that Python's `gzip`/`zlib` link — with **no C
# toolchain** (stays cross-platform, no cmake), so gzip/zlib stay dependency-light and portable
# while out-running the language-native codecs (see `benchmarks/yggdryl-core/compression.md`).
flate2 = { version = "1.1", optional = true, default-features = false, features = [
    "zlib-rs",
] }
zstd = { version = "0.13", optional = true }
xz2 = { version = "0.1", optional = true }

# The Apache Arrow interop crates (behind `--features arrow`) — the granular arrow-rs crates, so the
# bridge pulls only the type-system + array/buffer pieces it needs, not the umbrella `arrow` crate.
arrow-schema = { version = "56", optional = true, default-features = false }
arrow-array = { version = "56", optional = true, default-features = false }
arrow-buffer = { version = "56", optional = true, default-features = false }
arrow-data = { version = "56", optional = true, default-features = false }
