[package]
name = "yggdryl-data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Arrow-centralized data-model layer for yggdryl (data types, fields, scalars)"
keywords.workspace = true
readme = "README.md"

[lib]
name = "yggdryl_data"
path = "src/lib.rs"

[dependencies]
# Arrow interop surface: `RawDataType::to_arrow` / `RawField::to_arrow` build
# `arrow_schema::DataType` / `arrow_schema::Field`, and `RawScalar::to_arrow`
# builds a one-element `arrow_array` array (Arrow's own scalar representation).
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
# Optional structured logging via the `log` facade (the `log_event!` macro),
# mirroring yggdryl-core; off by default.
log = { version = "0.4", optional = true }

[features]
log = ["dep:log"]

[dev-dependencies]
# Benchmark harness for the codec / Arrow-interop benches (stable Rust has no
# built-in bencher). Same version as the yggdryl-core benches.
criterion = "0.5"

[[bench]]
name = "datatype"
harness = false
